client/chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  annotations:
    dev.okteto.com/generate-host: "true"
spec:
  # ingressClassName: nginx
  rules:
    - host:
      http:
        paths:
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: server
                port:
                  number: 5050
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 3000
